--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,10 @@
     <string name="nav_header_title">FCI</string>
     <string name="nav_header_subtitle">Fuculty of Computing and informatics</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="title_activity_lecturers">Lecturers</string>
+    <string name="title_activity_lecturers">FCI Staff</string>
     <string name="title_activity_time_table">TimeTable</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_publications">FCI Recent Publications</string>
+    <string name="title_activity_todo">Student\'s Todo List</string>
+
+
 </resources>
